[package]
name = "digi-pass-inventory-keeper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
bson = { version = "2.9.0", features = ["chrono-0_4", "serde_with"] }
chrono = { version = "0.4.34", features = ["serde"] }
dotenvy = "0.15.7"
mongodb = "2.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
