[package]
name = "digi-pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.18.0"
axum = { version = "0.7.4", features = ["macros"] }
bson = { version = "2.9.0", features = ["chrono-0_4", "serde_with"] }
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.30"
jsonwebtoken = "=9.3.0"
jwt-authorizer = { version = "0.14.0", features = ["native-tls-vendored"] }
lambda_http = "0.10.0"
mongodb = "2.8.1"
reqwest = { version = "0.12.1", features = ["native-tls-vendored", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
validator = { version = "0.17.0", features = ["derive"] }

