[package]
name = "generate-inventory-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.15.0"
bson = "2.9.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
mongodb = "2.8.1"
oauth2 = "4.4.2"
reqwest = { version = "0.11.25", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
